# spline-gl-lesson02

./: CMakeLists.txt  main.cpp  readme.md
